--- a/index.html
+++ b/index.html
@@ -33,7 +33,32 @@
         </div>
       </div>
     </header>
-
+    
+    <section class="weWait">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+              <div class="line"><img src="img/line.png"></div>
+              <h6>Мы ждем вас</h6>
+              <h1>В нашем салоне вам <br>всегда рады</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="#">Узнать больше</a>
+              <img src="img/arrow-left.png">
+          </div>
+          <div class="col-3">
+            <img src="img/img_1.png">
+          </div>
+          <div class="col-3">
+            <img src="img/img_2.png">
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
