--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
         </div>
       </div>
     </section>
+
+    <section class="advantages">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <div class="line">
+              <img src="img/line.png">
+            </div>
+            <h1>Наши преимущества</h1>   
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tortor orci, elementum eget accumsan a, faucibus et ipsum. Sed pulvinar tincidunt tincidunt. Morbi cursus ipsum in semper vulputate.</p>         
+          </div>
+          <div class="col-2 offset-2"><div class="icon"><img src="img/icon_sit.png"><p>Lorem ipsum dolor</p></div></div>
+          <div class="col-2"><div class="icon"><img src="img/icon_knife.png"><p>Lorem ipsum dolor</p></div></div>
+          <div class="col-2"><div class="icon"><img src="img/icon_lak.png"><p>Lorem ipsum dolor</p></div></div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
