--- a/index.html
+++ b/index.html
@@ -76,6 +76,80 @@
         </div>
       </div>
     </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-3">
+            <div class="img">
+              <img src="img/img_3.png">
+            </div>
+          </div>
+          <div class="col offset-1">
+            <h2 class="norm">
+              О салоне
+            </h2>
+            <h5 class="norm">
+              Салон красоты It Look
+            </h5>
+            <p class="norm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div class="arrow_down norm">
+              <img src="img/arrow.png" alt="">
+            </div>
+              <a href="#" class="norm">Узнать больше</a>
+          </div>
+        </div>
+        <div class="row block_2">
+            <div class="col-6 center"><h6>У нас работают</h6><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui, porta non facilisis vel, bibendum at tellus. </p><div class="line"><img src="img/line_2.png"></div><a href="#">Наша команда</a></div>
+            <div class="col-6 img"><img src="img/img_4.png"></div>
+        </div>
+        <div class="row block_3">
+          <div class="col-3">
+            <h6>Светлана<br>Лукоянова</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
+            <div class="line">
+              <img src="img/line_2.png">
+            </div>
+            <a href="#">парихмахер</a>
+          </div>
+          <div class="col-3 img"><img src="img/img_5.png"></div>
+          <div class="col-3">
+            <h6>Анастасия<br>Громова</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
+            <div class="line">
+              <img src="img/line_2.png">
+            </div>
+            <a href="#">Стилист</a>
+          </div>
+          <div class="col-3 img"><img src="img/img_6.png"></div>
+        </div>
+        <div class="row block_3">
+          <div class="col-3 img"><img src="img/img_7.png"></div>
+          <div class="col-3">
+            <h6>Екатерина<br>суркис</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
+            <div class="line">
+              <img src="img/line_2.png">
+            </div>    
+            <a href="#">вязажист</a>
+          </div>
+          <div class="col-3 img"><img src="img/img_8.png"></div>
+          <div class="col-3">
+            <h6>Екатерина<br>суркис</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
+            <div class="line">
+              <img src="img/line_2.png">
+            </div>
+            <a href="#">косметолог</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
