--- a/index.html
+++ b/index.html
@@ -150,6 +150,36 @@
         </div>
       </div>
     </section>
+
+    <section class="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="logo">
+              <a href="#"><img src="../img/logo_top.png"></a>
+            </div>
+            <ul>
+              <li><img src="img/icon_phone.png" alt="">+7 (931) 261-91-52</li>
+              <li><img src="img/icon_mail.png" alt="">stodioitlook@mail.ru</li>
+              <li><img src="img/icon_house.png" alt="">Смоленская 510 м, Москва, Новинский бульвар, 12</li>
+            </ul>
+            <ul class="social">
+              <li><img src="img/icon_kv.png" alt=""></li>
+              <li><img src="img/icon_fb.png" alt=""></li>
+              <li><img src="img/icon_tw.png"></li>
+            </ul>
+          </div>
+          <div class="col-6 form">
+          <h2>Запросите консультацию</h2>
+            <form>
+              <input type="text" name="name" placeholder="Ваше имя"> <br>
+              <input type="text" name="phone" placeholder="Ваш телефон"> <br>
+              <input type="button" name="button" value="Записаться">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
