--- a/index.html
+++ b/index.html
@@ -9,35 +9,38 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/media.css">
   </head>
   <body>
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-lg-3 col-md-3">
             <div class="logo">
               <a href="#"><img src="../img/logo_top.png"></a>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-lg col-md">
             <div class="center">
               <img src="img/logo.png"> <br>
               <span>Салон красоты</span><br>
-              <div class="button">
-                Подробнее
-              </div>
+              <a href="#weWait" style="text-decoration: none;">
+                <div class="button">
+                  Подробнее
+                </div>
+              </a>
             </div>
           </div>
         </div>
       </div>
     </header>
     
-    <section class="weWait">
+    <section class="weWait" id="weWait">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-lg-6 col-md-12">
               <div class="line"><img src="img/line.png"></div>
               <h6>Мы ждем вас</h6>
               <h1>В нашем салоне вам <br>всегда рады</h1>
@@ -50,10 +53,10 @@
               <a href="#">Узнать больше</a>
               <img src="img/arrow-left.png">
           </div>
-          <div class="col-3">
+          <div class="col-6 col-lg-3 col-md-6 img_3">
             <img src="img/img_1.png">
           </div>
-          <div class="col-3">
+          <div class="col-6 col-lg-3 col-md-6 img_3">
             <img src="img/img_2.png">
           </div>
         </div>
@@ -63,16 +66,16 @@
     <section class="advantages">
       <div class="container">
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-lg-4 col-md-12">
             <div class="line">
               <img src="img/line.png">
             </div>
             <h1>Наши преимущества</h1>   
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tortor orci, elementum eget accumsan a, faucibus et ipsum. Sed pulvinar tincidunt tincidunt. Morbi cursus ipsum in semper vulputate.</p>         
           </div>
-          <div class="col-2 offset-2"><div class="icon"><img src="img/icon_sit.png"><p>Lorem ipsum dolor</p></div></div>
-          <div class="col-2"><div class="icon"><img src="img/icon_knife.png"><p>Lorem ipsum dolor</p></div></div>
-          <div class="col-2"><div class="icon"><img src="img/icon_lak.png"><p>Lorem ipsum dolor</p></div></div>
+          <div class="col-4 offset-0 col-lg-2 offset-lg-2 col-md-4 offset-md-0"><div class="icon"><img src="img/icon_sit.png"><p>Lorem ipsum dolor</p></div></div>
+          <div class="col-4 col-lg-2 col-md-4"><div class="icon"><img src="img/icon_knife.png"><p>Lorem ipsum dolor</p></div></div>
+          <div class="col-4 col-lg-2 col-md-4"><div class="icon"><img src="img/icon_lak.png"><p>Lorem ipsum dolor</p></div></div>
         </div>
       </div>
     </section>
@@ -80,12 +83,12 @@
     <section class="about">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-lg-3 col-md-6">
             <div class="img">
               <img src="img/img_3.png">
             </div>
           </div>
-          <div class="col offset-1">
+          <div class="col-lg offset-1 col-md-5 offset-md-1">
             <h2 class="norm">
               О салоне
             </h2>
@@ -98,18 +101,18 @@
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="arrow_down norm">
+            <div class="arrow_down norm hidden-xs-down">
               <img src="img/arrow.png" alt="">
             </div>
               <a href="#" class="norm">Узнать больше</a>
           </div>
         </div>
         <div class="row block_2">
-            <div class="col-6 center"><h6>У нас работают</h6><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui, porta non facilisis vel, bibendum at tellus. </p><div class="line"><img src="img/line_2.png"></div><a href="#">Наша команда</a></div>
-            <div class="col-6 img"><img src="img/img_4.png"></div>
+            <div class="col-lg-6 col-md-12 center"><h6 style="font-size: 23px;">У нас работают</h6><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui, porta non facilisis vel, bibendum at tellus. </p><div class="line"><img src="img/line_2.png"></div><a href="#">Наша команда</a></div>
+            <div class="col-lg-6 col-md-6 img_2 hidden-md-down"><img src="img/img_4.png"></div>
         </div>
         <div class="row block_3">
-          <div class="col-3">
+          <div class="col-lg-3 col-md-6">
             <h6>Светлана<br>Лукоянова</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
             <div class="line">
@@ -117,8 +120,8 @@
             </div>
             <a href="#">парихмахер</a>
           </div>
-          <div class="col-3 img"><img src="img/img_5.png"></div>
-          <div class="col-3">
+          <div class="col-lg-3 col-md-6 col-12 img"><img src="img/img_5.png"></div>
+          <div class="col-lg-3 col-md-6 col-12">
             <h6>Анастасия<br>Громова</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
             <div class="line">
@@ -126,11 +129,11 @@
             </div>
             <a href="#">Стилист</a>
           </div>
-          <div class="col-3 img"><img src="img/img_6.png"></div>
+          <div class="col-lg-3 col-md-6 col-12 img"><img src="img/img_6.png"></div>
         </div>
         <div class="row block_3">
-          <div class="col-3 img"><img src="img/img_7.png"></div>
-          <div class="col-3">
+          <div class="col-lg-3 col-md-6 col-12 img"><img src="img/img_7.png"></div>
+          <div class="col-lg-3 col-md-6 col-12">
             <h6>Екатерина<br>суркис</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
             <div class="line">
@@ -138,8 +141,8 @@
             </div>    
             <a href="#">вязажист</a>
           </div>
-          <div class="col-3 img"><img src="img/img_8.png"></div>
-          <div class="col-3">
+          <div class="col-lg-3 col-md-6 col-12 img"><img src="img/img_8.png"></div>
+          <div class="col-lg-3 col-md-6 col-12">
             <h6>Екатерина<br>суркис</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est dui.</p>
             <div class="line">
@@ -154,7 +157,7 @@
     <section class="contact">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-lg-6 col-md-6">
             <div class="logo">
               <a href="#"><img src="../img/logo_top.png"></a>
             </div>
@@ -164,12 +167,12 @@
               <li><img src="img/icon_house.png" alt="">Смоленская 510 м, Москва, Новинский бульвар, 12</li>
             </ul>
             <ul class="social">
-              <li><img src="img/icon_kv.png" alt=""></li>
-              <li><img src="img/icon_fb.png" alt=""></li>
-              <li><img src="img/icon_tw.png"></li>
+              <li><a href="#"><img src="img/icon_kv.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon_fb.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon_tw.png"></a></li>
             </ul>
           </div>
-          <div class="col-6 form">
+          <div class="col-lg-6 col-md-6 form">
           <h2>Запросите консультацию</h2>
             <form>
               <input type="text" name="name" placeholder="Ваше имя"> <br>
@@ -184,7 +187,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-lg">
             <span>© 2017 The Village. Новости Москвы, Санкт-Петербурга.</span>
           </div>
         </div>
